--- a/home.html
+++ b/home.html
@@ -19,12 +19,12 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
         <!-- Styles -->
-        <link href="https://github.com/virtual-tech-school/youtube-clone/assets/css/home.css" rel="stylesheet">
+        <link href="assets/css/home.css" rel="stylesheet">
     </head>
     <body>
         <div class="text-center mt-5">
             <h1>YouTube Clone</h1>
         </div>
-        <script src="https://github.com/virtual-tech-school/youtube-clone/assets/scripts/home.js"></script>
+        <script src="assets/scripts/home.js"></script>
     </body>
 </html>
