--- a/explore.html
+++ b/explore.html
@@ -19,10 +19,10 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
         <!-- Styles -->
-        <link href="https://github.com/virtual-tech-school/youtube-clone/assets/css/explore.css" rel="stylesheet">
+        <link href="css/explore.css" rel="stylesheet">
     </head>
     <body>
 
-        <script src="https://github.com/virtual-tech-school/youtube-clone/assets/scripts/explore.js"></script>
+        <script src="scripts/explore.js"></script>
     </body>
 </html>
