video json added

--- a/explore.html
+++ b/explore.html
@@ -23,6 +23,8 @@
     </head>
     <body>
 
+        
+        <!-- Script -->
         <script src="scripts/explore.js"></script>
     </body>
 </html>
