--- a/home.html
+++ b/home.html
@@ -25,6 +25,8 @@
         <div class="text-center mt-5">
             <h1>YouTube Clone</h1>
         </div>
+
+        <!-- Script -->
         <script src="assets/scripts/home.js"></script>
     </body>
 </html>
