Made changes in .html file optimized linking of js file

--- a/explore.html
+++ b/explore.html
@@ -20,11 +20,13 @@
 
         <!-- Styles -->
         <link href="css/explore.css" rel="stylesheet">
+
+        <!-- Script -->
+        <script src="scripts/explore.js" defer></script>
     </head>
     <body>
 
         
-        <!-- Script -->
-        <script src="scripts/explore.js"></script>
+        
     </body>
 </html>
