--- a/home.html
+++ b/home.html
@@ -20,13 +20,15 @@
 
         <!-- Styles -->
         <link href="assets/css/home.css" rel="stylesheet">
+
+        <!-- Script -->
+        <script src="scripts/explore.js" defer></script>
     </head>
     <body>
         <div class="text-center mt-5">
             <h1>YouTube Clone</h1>
         </div>
 
-        <!-- Script -->
-        <script src="assets/scripts/home.js"></script>
+        
     </body>
 </html>
