--- a/video.html
+++ b/video.html
@@ -20,11 +20,14 @@
 
         <!-- Styles -->
         <link href="css/video.css" rel="stylesheet">
+        
+        <!-- Script -->
+        <script src="scripts/video.js" defer></script>
+
     </head>
     <body>
 
 
-        <!-- Script -->
-        <script src="scripts/video.js"></script>
+        
     </body>
 </html>
