--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 
         <div class="nav-left flex-div">
 
-            <img src="./assets/images/icon-menu.svg" class="manu" id="menu_ico" alt="">
+            <i class="fa-solid fa-bars menu"></i>
             <img src="./assets/images/logo.png" class="logo" alt="">
 
         </div>
@@ -48,7 +48,7 @@
 
             </div>
 
-            <img src="./assets/images/microphone-solid.svg" class="mic" alt="">
+            <i class="fa-solid fa-microphone mic"></i>
 
         </div>
 
