--- a/home.html
+++ b/home.html
@@ -1,7 +1,74 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>YouTube</title>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/b94f5696ce.js" crossorigin="anonymous"></script>
+
+    <!-- Roboto Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <!-- Styles -->
+    <link href="assets/css/home.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <!-- navbar -->
+    <div class="flex-div nav">
+
+        <div class="nav-left flex-div">
+
+            <i class="fa-solid fa-bars menu"></i>
+            <img src="./assets/images/logo.png" class="logo" alt="">
+
+        </div>
+
+        <div class="nav-middle flex-div">
+
+            <div class="search flex-div">
+
+                <input type="text" placeholder="Search" id="">
+                <i class="fa-solid fa-magnifying-glass"></i>
+
+            </div>
+
+            <i class="fa-solid fa-microphone mic"></i>
+
+        </div>
+
+        <div class="nav-right flex-div">
+
+            <i class="fa-solid fa-braille"></i>
+            <i class="fa-solid fa-bell"></i>
+            <i class="fa-solid fa-video-slash"></i>
+            <img src="./assets/images/apoorv.jpg" class="user" alt="">
+            
+        </div>
+
+    </div>
+    <!-- navbar finish -->
+
+    <!-- Script -->
+    <script src="assets/scripts/home.js"></script>
+</body>
+
     <head>
-        <title>YouTube</title>
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -22,10 +89,7 @@
         <link href="assets/css/home.css" rel="stylesheet">
     </head>
     <body>
-        <div class="text-center mt-5">
-            <h1>YouTube Clone</h1>
-        </div>
-
+        
         <!-- Script -->
         <script src="assets/scripts/home.js"></script>
     </body>
