--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         <div class="nav-left flex-div">
 
             <i class="fa-solid fa-bars menu" id="menu"></i>
-            <img src="./assets/images/logo.png" class="logo" alt="">
+            <img src="./assets/images/logo.png" class="logo" alt="Youtube Logo">
 
         </div>
 
@@ -57,7 +57,7 @@
             <i class="fa-solid fa-braille"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-video-slash"></i>
-            <img src="./assets/images/apoorv.jpg" class="user" alt="">
+            <img src="./assets/images/apoorv.jpg" class="user" alt="Apoorv's Image">
 
         </div>
 
@@ -70,25 +70,25 @@
         <!-- General Section -->
 
         <div class="short">
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-house"></i>
                 <p>Home</p>
 
             </a>
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-compass"></i>
                 <p>Explore</p>
 
             </a>
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-bolt"></i>
                 <p>Shorts</p>
 
             </a>
-            <a href="">
+            <a href="#">
 
                 <i class="fa-brands fa-youtube"></i>
                 <p>Subscriptions</p>
@@ -99,19 +99,19 @@
 
             <!-- History Section -->
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-clock-rotate-left"></i>
                 <p>History</p>
 
             </a>
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-photo-film"></i>
                 <p>Library</p>
 
             </a>
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-clock"></i>
                 <p>Watch later</p>
@@ -128,30 +128,30 @@
 
             <h6>SUBSCRIPTIONS</h6>
 
-            <a href="">
+            <a href="#">
 
-                <img src="./assets/images/apoorv.jpg" alt="">
+                <img src="./assets/images/apoorv.jpg" alt="Apoorv's Image">
                 <p>Apoorv Goyal</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
-                <img src="./assets/images/kunal.jpg" alt="">
+                <img src="./assets/images/kunal.jpg" alt="Kunal's Image">
                 <p>Kunal Kushwaha</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
-                <img src="./assets/images/sanu.jpg" alt="">
+                <img src="./assets/images/sanu.jpg" alt="Shanu's Image">
                 <p>Khera Shanu</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
-                <img src="./assets/images/rana.jpg" alt="">
+                <img src="./assets/images/rana.jpg" alt="Rana's Image">
                 <p>Rana Paul</p>
 
             </a>
@@ -166,28 +166,28 @@
 
             <h6>MORE FROM YOUTUBE</h6>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-brands fa-youtube"></i>
                 <p>Youtube Premium</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-gamepad"></i>
                 <p>Gaming</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-tower-broadcast"></i>
                 <p>Live</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-trophy"></i>
                 <p>Sports</p>
@@ -196,21 +196,21 @@
 
             <hr>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-gear"></i>
                 <p>Settings</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-circle-question"></i>
                 <p>Help</p>
 
             </a>
 
-            <a href="">
+            <a href="#">
 
                 <i class="fa-solid fa-comment"></i>
                 <p>Send Feedback</p>
