--- a/home.html
+++ b/home.html
@@ -283,6 +283,34 @@
 
     <!-- Catagory Bar Finish-->
 
+
+    <!-- Video Section -->
+
+    <div class="container video-div">
+        <div class="row" id="videos">
+
+            <!-- <div class="col-sm-12 col-md-6 col-lg-3">
+
+                <div class="card video">
+                    <img src="./assets/images/tumb.jpg" class="card-img-top" alt="...">
+                    <div class="card-body d-flex">
+                        <img class="card-title video-user" src="./assets/images/apoorv.jpg" alt="">
+                        <p class="card-text title">Some quick example text to build on the card title and make up the
+                            bulk of the card's content.</p>
+                    </div>
+                    <p class="channel-name">Apoorv Goyal</p>
+                </div>
+            </div>
+             
+            -->
+
+
+
+        </div>
+
+    </div>
+    <!-- Video Section Finish-->
+
     <!-- Script -->
     <script src="assets/scripts/home.js"></script>
 </body>
