--- a/home.html
+++ b/home.html
@@ -262,22 +262,22 @@
 
     <div class="catagory">
 
-        <button class="catagory_btn rounded-pill active">All</button>
-        <button class="catagory_btn rounded-pill">Live</button>
-        <button class="catagory_btn rounded-pill">Gaming</button>
-        <button class="catagory_btn rounded-pill">Music</button>
-        <button class="catagory_btn rounded-pill">JavaScript</button>
-        <button class="catagory_btn rounded-pill">Web Development</button>
-        <button class="catagory_btn rounded-pill">Cricket</button>
-        <button class="catagory_btn rounded-pill">Computer Programming</button>
-        <button class="catagory_btn rounded-pill">CSS</button>
-        <button class="catagory_btn rounded-pill">Artificial Intelligence</button>
-        <button class="catagory_btn rounded-pill">Chess</button>
-        <button class="catagory_btn rounded-pill">Stocks</button>
-        <button class="catagory_btn rounded-pill">Gadgets</button>
-        <button class="catagory_btn rounded-pill">Recently Upload</button>
-        <button class="catagory_btn rounded-pill">Watched</button>
-        <button class="catagory_btn rounded-pill">New to you</button>
+        <button class="catagory-btn rounded-pill active">All</button>
+        <button class="catagory-btn rounded-pill">Live</button>
+        <button class="catagory-btn rounded-pill">Gaming</button>
+        <button class="catagory-btn rounded-pill">Music</button>
+        <button class="catagory-btn rounded-pill">JavaScript</button>
+        <button class="catagory-btn rounded-pill">Web Development</button>
+        <button class="catagory-btn rounded-pill">Cricket</button>
+        <button class="catagory-btn rounded-pill">Computer Programming</button>
+        <button class="catagory-btn rounded-pill">CSS</button>
+        <button class="catagory-btn rounded-pill">Artificial Intelligence</button>
+        <button class="catagory-btn rounded-pill">Chess</button>
+        <button class="catagory-btn rounded-pill">Stocks</button>
+        <button class="catagory-btn rounded-pill">Gadgets</button>
+        <button class="catagory-btn rounded-pill">Recently Upload</button>
+        <button class="catagory-btn rounded-pill">Watched</button>
+        <button class="catagory-btn rounded-pill">New to you</button>
 
     </div>
 
