feat: ✅ [issue-4] Video section - Home page (#22)
* issue-4

* issue-4

* issue-4

* Restored

Co-authored-by: Apoorv Goyal <apoorvelous@gmail.com>

--- a/home.html
+++ b/home.html
@@ -262,26 +262,54 @@
 
     <div class="catagory">
 
-        <button class="catagory_btn rounded-pill active">All</button>
-        <button class="catagory_btn rounded-pill">Live</button>
-        <button class="catagory_btn rounded-pill">Gaming</button>
-        <button class="catagory_btn rounded-pill">Music</button>
-        <button class="catagory_btn rounded-pill">JavaScript</button>
-        <button class="catagory_btn rounded-pill">Web Development</button>
-        <button class="catagory_btn rounded-pill">Cricket</button>
-        <button class="catagory_btn rounded-pill">Computer Programming</button>
-        <button class="catagory_btn rounded-pill">CSS</button>
-        <button class="catagory_btn rounded-pill">Artificial Intelligence</button>
-        <button class="catagory_btn rounded-pill">Chess</button>
-        <button class="catagory_btn rounded-pill">Stocks</button>
-        <button class="catagory_btn rounded-pill">Gadgets</button>
-        <button class="catagory_btn rounded-pill">Recently Upload</button>
-        <button class="catagory_btn rounded-pill">Watched</button>
-        <button class="catagory_btn rounded-pill">New to you</button>
+        <button class="catagory-btn rounded-pill active">All</button>
+        <button class="catagory-btn rounded-pill">Live</button>
+        <button class="catagory-btn rounded-pill">Gaming</button>
+        <button class="catagory-btn rounded-pill">Music</button>
+        <button class="catagory-btn rounded-pill">JavaScript</button>
+        <button class="catagory-btn rounded-pill">Web Development</button>
+        <button class="catagory-btn rounded-pill">Cricket</button>
+        <button class="catagory-btn rounded-pill">Computer Programming</button>
+        <button class="catagory-btn rounded-pill">CSS</button>
+        <button class="catagory-btn rounded-pill">Artificial Intelligence</button>
+        <button class="catagory-btn rounded-pill">Chess</button>
+        <button class="catagory-btn rounded-pill">Stocks</button>
+        <button class="catagory-btn rounded-pill">Gadgets</button>
+        <button class="catagory-btn rounded-pill">Recently Upload</button>
+        <button class="catagory-btn rounded-pill">Watched</button>
+        <button class="catagory-btn rounded-pill">New to you</button>
 
     </div>
 
     <!-- Catagory Bar Finish-->
+
+
+    <!-- Video Section -->
+
+    <div class="container video-div">
+        <div class="row" id="videos">
+
+            <!-- <div class="col-sm-12 col-md-6 col-lg-3">
+
+                <div class="card video">
+                    <img src="./assets/images/tumb.jpg" class="card-img-top" alt="...">
+                    <div class="card-body d-flex">
+                        <img class="card-title video-user" src="./assets/images/apoorv.jpg" alt="">
+                        <p class="card-text title">Some quick example text to build on the card title and make up the
+                            bulk of the card's content.</p>
+                    </div>
+                    <p class="channel-name">Apoorv Goyal</p>
+                </div>
+            </div>
+             
+            -->
+
+
+
+        </div>
+
+    </div>
+    <!-- Video Section Finish-->
 
     <!-- Script -->
     <script src="assets/scripts/home.js"></script>
